# floating_word_explainer

./: .gitignore  README.md  config.py  default_config.py  floating_window.py  hotkey_listener.py  llm_client.py  main.py  pyproject.toml  settings_dialog.py  system_prompt.txt  toast.py  tray_icon.py  桌面悬浮窗划词解释工具_PRD.md
