[project]
name = "floating-word-explainer"
version = "0.1.0"
description = "桌面悬浮窗划词解释工具 - 划词即解释的AI助手"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyQt6>=6.6.0",
    "keyboard>=0.13.5",
    "pyperclip>=1.8.2",
    "httpx>=0.27.0",
    "pyautogui>=0.9.54",
    "markdown>=3.5",
]
